
9.31  2022-11-25
  - Removed experimental status from links method in Mojo::Headers.
  - Fixed a sporadic warning in Mojo::UserAgent. (s1037989)
  - Fixed UNIX domain socket support in Mojo::UserAgent debug feature. (s1037989)
  - Fixed a bug in Mojo::DOM where strings like "<.>" were considered valid tags.

9.30  2022-11-22
  - Added EXPERIMENTAL support for parsing and generating Link headers.
  - Added EXPERIMENTAL links method to Mojo::Headers.
  - Added EXPERIMENTAL header_params function to Mojo::Util.

9.29  2022-11-11
  - Fixed a bug where promises returning promises were not handled correctly. (batman)

9.28  2022-09-12
  - Fixed a bug where async/await use could result in unhandled promise warnings. (batman)

9.27  2022-09-10
  - Added support for static assets.
  - Added support for JSON and plain text exceptions.
  - Removed experimental status from capture method in Mojo::Log.
  - Added asset_dir attribute to Mojolicious::Static.
  - Added asset_path method to Mojolicious::Static.
  - Added url_for_asset method to Mojolicious::Controller.
  - Added reply->html_exception, reply->html_not_found, reply->json_exception, reply->json_not_found,
    reply->http_exception, reply->http_not_found, reply->txt_exception and reply->txt_not_found helpers to
    Mojolicious::Plugin::DefaultHelpers.
  - Added asset_tag helper to Mojolicious::Plugin::TagHelpers.
  - Fixed a bug where async rendering did not work properly in the before_dispatch hook. (andrii-suse)

9.26  2022-05-20
  - Added EXPERIMENTAL capture method to Mojo::Log.

9.25  2022-04-25
  - Improved Mojolicious::Renderer to throw an exception if rendering is attempted more than once.

9.24  2022-04-18
  - Improved Mojo::Headers to output headers in a canonical order.
  - Fixed a memory leak in Mojo::Asset::Memory.

9.23  2022-03-25
  - Enable gzip compression by default in Mojolicious::Renderer.

9.22  2021-10-16
  - Added a referer method to Mojo::Headers, as an alias for the referrer method.